syntax = "proto3";

package vita.labour;

import "amino/amino.proto";
import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "vita/labour/params.proto";
import "vita/labour/task.proto";
import "vita/labour/activity.proto";

option go_package = "vita/x/labour/types";

// Query defines the gRPC querier service.
service Query {
  
  // Parameters queries the parameters of the module.
  rpc Params (QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/vita/labour/params";
  
  }
  
  // Queries a list of Task items.
  rpc Task    (QueryGetTaskRequest) returns (QueryGetTaskResponse) {
    option (google.api.http).get = "/vita/labour/task/{id}";
  
  }
  rpc TaskAll (QueryAllTaskRequest) returns (QueryAllTaskResponse) {
    option (google.api.http).get = "/vita/labour/task";
  
  }
  
  // Queries a list of Activity items.
  rpc Activity    (QueryGetActivityRequest) returns (QueryGetActivityResponse) {
    option (google.api.http).get = "/vita/labour/activity/{id}";
  
  }
  rpc ActivityAll (QueryAllActivityRequest) returns (QueryAllActivityResponse) {
    option (google.api.http).get = "/vita/labour/activity";
  
  }
}
// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  
  // params holds all the parameters of this module.
  Params params = 1 [(gogoproto.nullable) = false, (amino.dont_omitempty) = true];
}

message QueryGetTaskRequest {
  uint64 id = 1;
}

message QueryGetTaskResponse {
  Task Task = 1 [(gogoproto.nullable) = false];
}

message QueryAllTaskRequest {
  cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message QueryAllTaskResponse {
  repeated Task                                   Task       = 1 [(gogoproto.nullable) = false];
           cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

message QueryGetActivityRequest {
  uint64 id = 1;
}

message QueryGetActivityResponse {
  Activity Activity = 1 [(gogoproto.nullable) = false];
}

message QueryAllActivityRequest {
  cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message QueryAllActivityResponse {
  repeated Activity                               Activity   = 1 [(gogoproto.nullable) = false];
           cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

